--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WDHUwL4XP+iSV8jSb2KjNcEeRPZ+1KKZ6WzSca2SZZU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=mysql
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=someamazingpassword
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,12 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Docker
+
+MYSQL_ROOT_PASSWORD=someamazingpassword
+
+
+SESSION_DRIVER=cookie
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,127.0.0.1:8000,localhost:5173,127.0.0.1:5173
+SESSION_DOMAIN=127.0.0.1
