Refactor font loading and remove welcome view
- Updated app.blade.php to preload custom font styles and commented out unused font links.
- Deleted the welcome.blade.php view file to streamline the application.
- Added font.css to public/fonts for local font loading.
- Updated vite.config.js to include gzip compression for assets and adjusted build configurations.

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,8 +8,8 @@ server {
     }
 
     location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg)$ {
-        expires 7d;
-        add_header Cache-Control "public, max-age=604800, immutable";
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000, immutable";
         access_log off;
     }
 
@@ -27,6 +27,7 @@ server {
     }
 
     gzip on;
+    gzip_static on;
     gzip_types text/plain application/xml text/css text/javascript application/javascript application/json;
     gzip_min_length 256;
 }
