--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
+        "vite-plugin-compression": "^0.5.1",
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "axios": "^1.6.4",
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@inertiajs/inertia": "^0.11.1",
+        "axios": "^1.6.4",
         "just-debounce-it": "^3.2.0",
         "vue-multiselect": "^3.2.0"
     }
